--- a/tests/config.yaml
+++ b/tests/config.yaml
@@ -18,22 +18,22 @@ testing:
     node18:
       dockerfile: "tests/docker/js/node18.Dockerfile"
       tag: "lintair-test:node18"
-      description: "Node.js 18 with npm and prettier"
+      description: "Ubuntu 22.04 with Node.js 18, npm and prettier"
       
     python311:
       dockerfile: "tests/docker/python/python311.Dockerfile" 
       tag: "lintair-test:python311"
-      description: "Python 3.11 with pip and ruff"
+      description: "Ubuntu 22.04 with Python 3.11, pip and ruff"
       
     go121:
       dockerfile: "tests/docker/go/go121.Dockerfile"
       tag: "lintair-test:go121"
-      description: "Go 1.21 with gofmt"
+      description: "Ubuntu 22.04 with Go 1.21 and gofmt"
       
     minimal:
       dockerfile: "tests/docker/minimal.Dockerfile"
       tag: "lintair-test:minimal"
-      description: "Minimal Alpine Linux without dev tools"
+      description: "Minimal Ubuntu 22.04 without dev tools"
 
   # Parallel execution
   parallel:
