Rename to taidy and prepare for release

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,54 @@
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Go workspace file
+go.work
+
+# Build artifacts
+taidy
+lintair
+dist/
+*.tar.gz
+*.zip
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Test coverage
+coverage.html
+coverage.out
+
+# Temporary files
+*.tmp
+*.bak
+
+# Test logs
 /tests/*.log
 *.pyc
 
 # Claude settings
 .claude/settings.local.json
+CLAUDE.md
