--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,3 +71,19 @@ include = ["taidy*"]
 
 [tool.setuptools.package-data]
 taidy = ["py.typed"]
+
+[tool.ruff]
+fix = true
+unsafe-fixes = true
+line-length = 100
+
+[tool.ruff.lint]
+extend-select = ["E", "F", "I"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+line-ending = "lf"
+
+[tool.ruff.lint.isort]
+known-first-party = ["clawssify"]
