Use json instead of yaml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,7 @@ version = "0.1.0"
 description = "Smart linter/formatter with automatic tool detection"
 readme = "README.md"
 requires-python = ">=3.6"
-dependencies = [
-    "pyyaml",
-]
+dependencies = []
 license = "MIT"
 authors = [
     {name = "singletoned"},
